--- a/FrontEnd/src/components/Display/Display.css
+++ b/FrontEnd/src/components/Display/Display.css
@@ -6,6 +6,7 @@
     grid-template-columns: 22% 22% 22% 22% 22% 22% 22% 22%;
     grid-column-gap: 4%;
 
-    height: calc(100% - 80px);
+    /*height: calc(100% - 82px);*/
     width: 100%;
+    background-color: #f3f3f3;
 }
