--- a/FrontEnd/src/components/Term/Term.css
+++ b/FrontEnd/src/components/Term/Term.css
@@ -1,9 +1,11 @@
 .term-container {
     padding: 10px;
     border: 1px solid #DFE3EA;
-    background-color: #f3f3f3;
+    background-color: #e3e5e8;
     width: 100%;
-
+    border-radius: 8px;
+    box-shadow: 0 1px 2px 0 #7a7b7c;
+    height: fit-content;
 }
 
 .term-stats-container {
@@ -20,8 +22,14 @@
 }
 
 .term-mandatory-course {
+    padding: 9px 20px;
+    border: 1px solid #DFE3EA;
+    margin-top: 15px;
+    background-color: #f3f3f3;
+    border-radius: 3px;
 
 }
+
 
 .term-mandatory-course-container {
 
