Added elective drop down array.

--- a/FrontEnd/src/components/Dropdown/Dropdown.css
+++ b/FrontEnd/src/components/Dropdown/Dropdown.css
@@ -34,6 +34,7 @@
     border-radius: 5px;
     width: 100%;
     border: 1px solid #DFE3EA;
+    padding: 9px 20px;
     height: 39px;
     background-color: inherit;
 }
